--- a/ppt/ppt.tex
+++ b/ppt/ppt.tex
@@ -4,7 +4,7 @@
 \documentclass[14pt, AutoFakeBold]{ppt}
 
 
-\title{本 科 生 毕 业 答 辩}
+\title{本 科 毕 业 论 文 答 辩}
 \subtitle{基于 ICEEMDAN 多特征分解和Prophet-GRU-NN组合模型多步预测短期风速}
 
 \author{答辩人：蒋嵩林}
@@ -134,7 +134,7 @@
     \caption{两种经典神经网络结构示意图}
     \label{fig_nn}
   \end{figure}
-  经典RNN中每个神经元：$h_t=\sigma(Wx_t+Uh_{t-1}+b_z)$
+  经典RNN中每个神经元：$h_t=\sigma(Wx_t+Uh_{t-1}+b)$
 \end{frame}
 
 \begin{frame}
@@ -254,7 +254,7 @@
   \frametitle{特征选取}
   \begin{table}[H]
     \centering
-    \caption{选取特征说明\upcite{6bab74c1-f2dd-4e24-a833-81f33bedf9b1}}
+    \caption{数据集中所包括特征值的单位以及含义说明\upcite{6bab74c1-f2dd-4e24-a833-81f33bedf9b1}}
     \begin{tabular}{lcc}
     \toprule
     名称 & 单位 & 含义 \\
