--- a/paper.tex
+++ b/paper.tex
@@ -1103,7 +1103,7 @@ numpy库相关方法进行傅里叶变换，生成幅频。最终使用Matplotli
 
 如图\ref{fig_ICEEMDAN_Prophet_GRU_Wind}所示，本模型在基于风速历史时间序列数据的
 ICEEDMAN-GRU模型基础上，将每个窗口的输入值同时使用Prophet框架进行统计分析处理，得到
-该窗口数据对应的预测值、趋势分量、累加式季节性分量以及上述分量所对应的预测最大边界和最
+该窗口数据对应的拟合值、趋势分量、累加式季节性分量以及上述分量所对应的预测最大边界和最
 小边界共计9个特征，并与原始数据进行拼接整合，得到（5820，8，10）的矩阵。随后将后两个
 维度展平，生成的（5820，80）矩阵进行数据标准化缩放，再通过使用RBF核函数的核
 主成分分析（KPCA），将训练集升维至（5820，5819），变形之后再输入进入同基于风速历史
