--- a/paper.tex
+++ b/paper.tex
@@ -164,7 +164,10 @@ hybrid model, neural network, deep learning, data science.
 
 \chapter{绪 \qquad 论}
 
-% ！学校要求的规范，绪论是单独的，不是第一章，但是老师们都是让作为第一章，这里我把它放在了论文里，如果你要让在外面，只需要把上面的 \mainmatter 这一句话放在“绪论内容后面，正文第一章前面”即可，也就是 \chapter{latex部分用法简介} 这一句话上面
+% ！学校要求的规范，绪论是单独的，不是第一章，但是老师们都是让作为第一章，这里我把它放在了论文里。
+% 如果你要让在外面，只需要把上面的 \chapter{绪 \qquad 论} 这一句话删去，下面两行去掉注释就行了。
+% \addcontentsline{toc}{chapter}{绪 \qquad 论}
+% \chapter*{绪 \qquad 论}
 
 % \Intro{
 \section{选题研究背景及意义}
