--- a/ppt/ppt.tex
+++ b/ppt/ppt.tex
@@ -8,8 +8,8 @@
 \subtitle{基于 ICEEMDAN 多特征分解和Prophet-GRU-NN组合模型多步预测短期风速}
 
 \author{答辩人：蒋嵩林}
-\institute{指导老师：任超 副教授}
-\date{\today}
+\institute{指导老师：任超}
+\date{2022年5月24日}
 \titlegraphic{\includegraphics[height=0.15\textwidth]{lzu_logo.png}}
 
 
