--- a/bib/database.bib
+++ b/bib/database.bib
@@ -4,7 +4,7 @@
   url={https://www.efchina.org/Attachments/Report/report-lceg-20210430-3/2020%E8%83%BD%E6%BA%90%E6%95%B0%E6%8D%AE.pdf},
   title={2020能源数据},
   year={2021},
-  language = {中文;},
+  language = {中文},
   author={王庆一}
 }
 
@@ -12,6 +12,7 @@
   url={https://blog.csdn.net/foneone/article/details/90141213},
   title={{时间序列模型（ARIMA和ARMA）完整步骤详述}},
   year={2019},
+  language = {中文},
   author={Foneone}
 }
 
@@ -19,7 +20,7 @@
   title={{T639数值预报产品在南汇站风速预报中的统计释用}},
   author={朱智慧 and 黄宁立},
   booktitle={长三角科技论坛能源分论坛-长三角气象科技论坛},
-  language = {中文;},
+  language = {中文},
   year={2010},
 }
 
@@ -30,7 +31,7 @@
   volume={43},
   number={6},
   pages={7},
-  language = {中文;},
+  language = {中文},
   year={2019},
 }
 
@@ -41,7 +42,7 @@
   volume={21},
   number={2},
   pages={6},
-  language = {中文;},
+  language = {中文},
   year={2017},
 }
 
@@ -78,7 +79,7 @@
   title={风力发电企业价值评估研究},
   author={李仲蔚},
   school={湖南大学},
-  language = {中文;},
+  language = {中文},
   year={2019},
 }
 
@@ -123,7 +124,7 @@
   title={{基于EEMD和LSTM的短期风速预测模型研究}},
   author={陆冰鉴 and 周鹏 and 王兴 and 周可},
   journal={软件工程},
-  language = {中文;},
+  language = {中文},
   number={3},
   pages={43-48},
   year={2020},
@@ -138,7 +139,7 @@
  publisher = {国家青藏高原科学数据中心},
  title = {中国区域地面气象要素驱动数据集（1979-2018）},
  url = {https://dx.doi.org/10.11888/AtmosphericPhysics.tpe.249369.file},
- language = {中文;},
+ language = {中文},
  year = {2019}
 }
 
@@ -177,7 +178,7 @@
   title={{基于CEEMDAN分解和改进的LSTM模型的短期风速预测}},
   author={谢义超},
   school={武汉科技大学},
-  language = {中文;},
+  language = {中文},
   year={2021},
 }
 
@@ -185,7 +186,7 @@
   title={{基于WD-ARIMA-LSTM的短期风速预测}},
   author={王秀},
   school={华北电力大学},
-  language = {中文;},
+  language = {中文},
   year={2021},
 }
 
@@ -193,7 +194,7 @@
   title={风电场短期风速预测方法研究},
   author={朱丽娜},
   school={兰州理工大学},
-  language = {中文;},
+  language = {中文},
   year={2021},
 }
 
@@ -204,7 +205,7 @@
   volume={45},
   number={001},
   pages={51-71},
-  language = {中文;},
+  language = {中文},
   year={2019},
 }
 
